Replaced Math.max with clamp